<resources>
    <string name="app_name">Blood System</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_user_main">UserMainActivity</string>
    <string name="tab_text_1">Donner</string>
    <string name="tab_text_2">Patient</string>
    <string name="tab_text_3">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="corona_test">Corona Test</string>
    <string name="blood_plasma_test">Blood plasma test</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="name2">أسم</string>
    <string name="address2">عنوان</string>
    <string name="blood_type">فصيلة الدم</string>
    <string name="PhoneNum">رقم الهاتف</string>
    <string name="add">Add</string>

    <string-array name="Nv">
        <item>Negative</item>
        <item>Positive</item>
    </string-array>

    <string-array name="BloodTypes">
        <item>O-</item>
        <item>O+</item>
        <item>A-</item>
        <item>A+</item>
        <item>B-</item>
        <item>B+</item>
        <item>AB-</item>
        <item>AB+</item>
    </string-array>

</resources>
